# chatblade

./: README.md  pyproject.toml
chatblade/: chat.py  cli.py  parser.py  printer.py  storage.py
